# ai-memory

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
crates/ai-memory-cli/: Cargo.toml
crates/ai-memory-cli/src/: auth.rs  auth_bearer.rs  cli.rs  config.rs  http_client.rs  logging.rs  main.rs  process_guard.rs
crates/ai-memory-cli/templates/: config.default.toml
crates/ai-memory-cli/tests/: completions.rs  hook_payload.rs  packaging.rs  removal.rs  uninstall.rs
crates/ai-memory-consolidate/src/: auto_improve.rs  auto_improve_schedule.rs  bootstrap.rs  consolidator.rs  curator.rs  embed.rs  lib.rs  lint.rs  projection.rs  sweep.rs
crates/ai-memory-hooks/: Cargo.toml
crates/ai-memory-mcp/: Cargo.toml
crates/ai-memory-web/: Cargo.toml  build.rs
crates/ai-memory-web/src/: lib.rs  markdown.rs  mount.rs  state.rs  templates.rs
crates/ai-memory-web/src/routes/: index.rs  mod.rs  page.rs  project.rs  search.rs  statics.rs
crates/ai-memory-web/static/: tailwind.css
crates/ai-memory-web/templates/: base.html  not_found.html  page.html  project.html  projects.html  search.html
crates/ai-memory-web/tests/: routes.rs
crates/ai-memory-wiki/: Cargo.toml
crates/ai-memory-workstream/: Cargo.toml
crates/ai-memory-workstream/src/: harness.rs  lib.rs  repository.rs  transcript.rs
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  admission-webhooks.md  auto-improve-eval-gates.md  auto-improvement-loop.md  deploy.md  design-decisions.md  frontend-api.md  https-via-proxy.md  install.md  lifecycle-ops.md  managed-harness-contributions.md  managed-workstreams.md  marker-file.md  mcp-install.md  shell-completions.md  usage.md  users.md  windows.md
hooks/: _lib.sh
hooks/claude-code/: session-start.sh  stop.sh
hooks/codex/: session-start.sh
hooks/grok/: post-tool-use.ps1  post-tool-use.sh  pre-compact.ps1  pre-compact.sh  pre-tool-use.ps1  pre-tool-use.sh  session-end.ps1  session-end.sh  session-start.ps1  session-start.sh  stop.ps1  stop.sh  user-prompt-submit.ps1  user-prompt-submit.sh
hooks/kimi-code/: session-start.ps1  session-start.sh  user-prompt-submit.ps1  user-prompt-submit.sh
hooks/lib/: ai-memory-hook.ps1
hooks/opencode/: session-start.sh
scripts/: install-hooks.sh  managed-workstream-acceptance.sh
tests/e2e/: handoff_smoke.sh
(+103 files in other folders)
