[package]
name = "ai-memory-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Read-only HTTP browser for the ai-memory wiki (project list, tree navigation, markdown rendering, FTS5 search)."

[dependencies]
ai-memory-core.workspace = true
ai-memory-store.workspace = true
ai-memory-wiki.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
jiff.workspace = true
sha2.workspace = true

# Templating + markdown.
askama = "0.12"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

[build-dependencies]
anyhow.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true

[lints]
workspace = true
